# CppMutationTest

./: CMakeLists.txt  README.md  config.ini
CMake_Testing/: CMakeLists.txt  makenewcmakelist.py
XMLTesting/: Test.xml  read_xml.py
src/: Arithmetic_Operator1.py  Arithmetic_Operator2.py  Arithmetic_Operator3.py  Arithmetic_Operator4.py  BinaryTrueFalse.py  Equality_Operator1.py  Equality_Operator2.py  GenerateMutants.py  Logical_Operator1.py  Logical_Operator2.py  config.ini  configError.py  configExists.py  getfilename.py  makenewcmakelist.py  mutant_dictionary.py  mutator.py
tests/: MutatorClass.py  testAndToOr.py  testAsteriskEqualsToPercentEquals.py  testAsteriskEqualtoSlashEqual.py  testAsteriskToFslash.py  testAsteriskToPercent.py  testConditionalToFalse.py  testConditionalToTrue.py  testEqualsToNotEquals.py  testFalseToTrue.py  testFslashEqualsToAsteriskEquals.py  testFslashToAsterisk.py  testGreaterThanEqualsToGreaterThan.py  testGreaterThanToGreaterThanEqual.py  testLessThanEqualToLessThan.py  testLessThanToLessThanEqual.py  testMinusEqualsToPlusEquals.py  testMinusMinusToPlusPlus.py  testMinusToPlus.py  testModuleEqualtoAsteriskEqual.py  testNotEqualsToEquals.py  testOrToAnd.py  testPercentToAsterisk.py  testPlusEqualsToMinusEquals.py  testPlusPlusToMinusMinus.py  testPlusToMinus.py  testSingleANDtoSIngleOR.py  testSingleORSingleAND.py  testStringToEmptyString.py  testTrueToFalse.py
